syntax = "proto3";

option java_package = "ordersapp.orderservice.proto";
option java_outer_classname = "OrderServiceProto";

service OrderService {
  rpc GetOrderStatus (GetOrderStatusRequest) returns (GetOrderStatusResponse);
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrders (GetOrdersRequest) returns (GetOrdersResponse);
}


message GetOrderStatusRequest {
  int64 order_id = 1;
}

message GetOrderStatusResponse {
  string order_status = 1;
}

message CreateOrderRequest {
  int64 user_id = 1;
  string amount = 2;
  string payload = 3;
}

message CreateOrderResponse {
  int64 order_id = 1;
}

message GetOrdersRequest {
  int64 user_id = 1;
}

message GetOrdersResponse {
  message Order {
    int64 order_id = 1;
    int64 user_id = 2;
    string amount = 3;
    string payload = 4;
    string status = 5;
  }

  repeated Order orders = 1;
}
